Primera subida, app comensal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <a routerLink="/login" routerLinkActive="active">Login</a><br />
   <a routerLink="/register" routerLinkActive="active">Register</a>
   <br />
