--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+<!--
 <div class="container">
   <a routerLink="/login" routerLinkActive="active">Login</a><br />
   <a routerLink="/register" routerLinkActive="active">Register</a>
@@ -5,3 +7,4 @@
   <br />
   <router-outlet></router-outlet>
 </div>
+-->
