--- a/src/app/components/cartilla/cartilla-menu/cartilla-menu.component.css
+++ b/src/app/components/cartilla/cartilla-menu/cartilla-menu.component.css
@@ -12,7 +12,60 @@
 }
 
 .category-selected {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  color: darkblue;
+  color: #D92200;
+  border-bottom-color: rgb(217, 34, 0);
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
 }
+
+.menucat{
+  position: sticky;
+  top: 100px;
+  background-color: rgb(255, 255, 255);
+  z-index: 9;
+  display: flex;
+  flex-direction: row;
+  padding: 8px 16px;
+  overflow-x: scroll;
+  border-bottom: 1px solid rgb(230, 235, 241);
+  border-top: 1px solid rgb(230, 235, 241);
+}
+
+.guXzfb {
+display: flex;
+margin-left: 16px;
+}
+
+.xcYKY {
+display: flex;
+-webkit-box-align: center;
+align-items: center;
+cursor: pointer;
+white-space: nowrap;
+}
+
+.xcYKY.active span {
+border-radius: 0px;
+color: rgb(41, 216, 132);
+border-bottom: 4px solid rgb(41, 216, 132);
+}
+
+.xcYKY span {
+padding: 5px 8px;
+border-radius: 0px;
+}
+
+.fyzoZN {
+font-size: 14px;
+font-family: Nunito;
+font-weight: 800;
+line-height: 1.71;
+letter-spacing: normal;
+}
+
+a {
+background-color: transparent;
+color: inherit;
+text-decoration: inherit;
+}
+
