--- a/src/app/components/cartilla/cartilla-menu/item/item.component.css
+++ b/src/app/components/cartilla/cartilla-menu/item/item.component.css
@@ -6,6 +6,45 @@
   box-shadow: grey 0px 0px 10px;
 }
 
+.cartilla-item__name{
+  font-size: 18px;
+  font-family: Nunito;
+  font-weight: bold;
+  margin-bottom: 0px;
+  color: #D92200;
+}
+
+.cartilla-item__summary{
+  font-size: 14px;
+  font-family: Nunito;
+  margin-bottom: 0px;
+}
+
+.cartilla-item__price{
+  font-size: 14px;
+  font-family: Nunito;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.cont_tit_cant{
+  display: flex;
+  justify-content: space-between;
+}
+
+.btnpedir{
+  width: 79px;
+  margin-right: 11px;
+}
+
+.btns{
+  width: 105px;
+  text-align: right;
+}
+
+
+
+
 .btn-add-align{
   text-align: right;
   margin-right: -10px;
