--- a/src/app/components/cartilla/cartilla.component.css
+++ b/src/app/components/cartilla/cartilla.component.css
@@ -1,14 +1,11 @@
-.btn-cartilla,
-.logo-cartilla {
-  width: 50%;
-  height: 100%;
+.contbuttons{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  position: sticky;
+  top: 50px;
+  z-index: 9;
+  background: white;
+  height: 50px;
 }
 
-.btn-selected {
-  background-color: #f5f5f5;
-  color: #000;
-}
-
-.center{
-  text-align: center;
-}
