--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -1,84 +1,51 @@
-<section class="h-100 gradient-form" style="background-color: #eee;">
-  <div class="container py-5 h-100">
+<div class="h-100">
+
+  <div class="contlogo">
+    <img src="../../../assets/log400.png" alt="logo" class="logo">
+    <p class="slogan">Comer sin complicaciones</p>
+  </div>
+
+  <div class="container p-4">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-xl-10">
-        <div class="card rounded-3 text-black">
-          <div class="row g-0">
-            <div class="col-lg-6">
-              <div class="card-body p-md-5 mx-md-4">
-
-                <div class="text-center">
-                  <img src="../../../assets/logo optimum.jpg" style="width: 185px;" alt="logo">
-                  <h4 class="mt-1 mb-5 pb-1">Comer sin complicaciones</h4>
-                </div>
-
-                <form>
-                  <p>Por favor ingrese a su cuenta</p>
-
-                  <div class="form-outline mb-4">
-                    <input
-                    type="email"
-                    id="email-input"
-                    class="form-control"
-                    [(ngModel)]="email"
-                    name="email"
-                    placeholder="Email"
-                    required="required"
-                    />
-                    <label class="form-label" for="email-input">Email</label>
-                  </div>
-
-                  <div class="form-outline mb-4">
-                    <input
-                    type="password"
-                    id="password-input"
-                    class="form-control"
-                    [(ngModel)]="password"
-                    name="password"
-                    placeholder="Password"
-                    required="required"
-                    />
-
-                    <label class="form-label" for="password-input">Password</label>
-                  </div>
-
-                  <div class="text-center pt-1 mb-5 pb-1">
-                    <button
-                      class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                      type="submit"
-                      (click)="login()"
-                    >
-                    Log in
-                    </button>
-                    <p><a class="text-muted" href="#!">Forgot password?</a></p>
-                    <p><mat-spinner style="margin:0 auto;"  *ngIf="showSpinner" mode="indeterminate" diameter="20" ></mat-spinner></p>
-                  </div>
-
-                  <div class="d-flex align-items-center justify-content-center pb-4">
-                    <p class="mb-0 me-2">¿No tienes una cuenta?</p>
-                    <button
-                      type="button"
-                      routerLink="/register"
-                      class="btn btn-outline-danger">
-                      Crear cuenta
-                    </button>
-                  </div>
-
-                  <div class="d-flex align-items-center justify-content-center pb-4">
-                    <p class="mb-0 me-2">Demo account: janet.weaver@reqres.in | 123 </p>
-                  </div>
-
-                </form>
-
-              </div>
-            </div>
-           <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-              <app-front-page></app-front-page>
-            </div>
-
+      <div class="col">
+        <p class="text-center p-2">Por favor ingrese a su cuenta</p>
+        <form>
+          <div class="mb-3">
+            <input type="email" id="email-input" class="form-control" [(ngModel)]="email" name="email"
+              placeholder="Email" required="required" />
           </div>
-        </div>
+          <div class="mb-3">
+            <input type="password" id="password-input" class="form-control" [(ngModel)]="password" name="password"
+              placeholder="Password" required="required" />
+          </div>
+
+          <div class="d-grid gap-2 text-center">
+            <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3 border-0" type="submit"
+              (click)="login()">
+              Entrar
+            </button>
+            <p><a class="text-muted" href="#!">¿Olvidó su contraseña?</a></p>
+            <p>
+              <mat-spinner style="margin:0 auto;" *ngIf="showSpinner" mode="indeterminate" diameter="20">
+              </mat-spinner>
+            </p>
+          </div>
+
+          <div class="d-flex align-items-center justify-content-center pb-4">
+            <p class="mb-0 me-2">¿No tienes una cuenta?</p>
+            <button type="button" routerLink="/register" class="btn btn-outline-danger">
+              Crear cuenta
+            </button>
+          </div>
+
+          <!--
+          <div class="d-flex align-items-center justify-content-center pb-4">
+            <p class="mb-0 me-2">Demo account: janet.weaver@reqres.in | 123 </p>
+          </div>
+          -->
+        </form>
+
       </div>
     </div>
   </div>
-</section>
+</div>
