--- a/src/app/components/open-mesa/open-mesa.component.html
+++ b/src/app/components/open-mesa/open-mesa.component.html
@@ -1,70 +1,82 @@
-<section class="h-100 gradient-form" style="background-color: #eee;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-xl-10">
-        <div class="card rounded-3 text-black">
+<app-headeropti></app-headeropti>
+<div class="container py-2">
 
-          <div class="row">
-            <div class="col-6" style="text-align: center;"><img src="../../../assets/logo optimum.jpg"></div>
-            <div class="col-6" style="text-align: center;"><img [src]="'data:image/jpg;base64,' + image" /></div>
-          </div>
+  <div class="row" style="margin-top: 2rem; margin-bottom:2rem">
+    <div class="col-4" style="text-align:right ;">
+      <img class="logoresto" [src]="'data:image/jpg;base64,' + image" />
+    </div>
+    <div class="col-8">
+      <div class="row titresto">{{ nombreResto }}</div>
+      <div class="row slogan">{{ textoBienvenida }}</div>
+    </div>
 
-          <div class="row"><br></div>
+  </div>
 
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-              <p>{{ textoBienvenida }}</p>
-            </div>
-            <div class="col-3"></div>
-          </div>
 
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-              <h4>Tu mesa es: {{ numeroMesa }}</h4>
-            </div>
-            <div class="col-3"></div>
-          </div>
 
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-              <h4>Tu mozo es: {{ nombreMozo }}</h4>
-            </div>
-            <div class="col-3"></div>
-          </div>
+  <div class="row  align-items-center rowdat my-4">
+    <div class="col-2 colicon">
+      <span class="material-symbols-outlined icgde py-2">
+        table_bar
+      </span>
+    </div>
+    <div class="col-4">
+      <span class="comment__user"><strong>Tu mesa es:</strong></span>
+    </div>
+    <div class="col-6 text-center">
+      <span class="datores">{{ numeroMesa }}</span>
+    </div>
 
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-              <h4>Cuentas personas van a ser?</h4>
-            </div>
-            <div class="col-3"></div>
-          </div>
+  </div>
 
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-              <form (submit)="onSubmit()" class="form-group">
 
-                <label class="form-label" for="input-adultos">Comensales:</label>
-                <input type="number" id="input-adultos" class="form-control" style="width: 20%;" placeholder="2" [(ngModel)]="inputComensales" [ngModelOptions]="{standalone: true}" >
-                <div id="input-adultos-help" class="form-text">Cantidad de comensales.</div>
-                <br>
-                <br>
-                <br>
-                <input type="submit" class="form-control btn btn-primary" value="Comencemos"/>
-                <br>
-                <br>
-                <br>
-              </form>
-            </div>
-            <div class="col-3"></div>
-          </div>
-
-        </div>
-      </div>
+  <div class="row  align-items-center rowdat my-4 ">
+    <div class="col-2 colicon">
+      <span class="material-symbols-outlined icgde py-2">
+        face
+      </span>
+    </div>
+    <div class="col-4">
+      <span class="comment__user"><strong>Tu mozo es:</strong></span>
+    </div>
+    <div class="col-6 text-center">
+      <span class="datores">{{ nombreMozo }}</span>
     </div>
   </div>
-</section>
+
+  <div class="row text-center" style="margin-top:4rem ;">
+      <span class="material-symbols-outlined iconxl" >
+        group_add
+      </span>
+      <h4>¿Cuantas personas van a ser?</h4>
+  
+
+
+        <form (submit)="onSubmit()">
+          <div style="margin-bottom:4rem ;">
+            <div class="d-flex justify-content-center">
+              <input type="number" id="input-adultos" class="form-control" style="width: 20%;"
+                [(ngModel)]="inputComensales" [ngModelOptions]="{standalone: true}">
+              </div>  
+          </div>  
+          <div class="d-grid gap-2 text-center">
+            <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3 border-0" type="submit">
+              Comencemos
+            </button>
+          </div>
+
+        </form>
+    </div>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
