--- a/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
+++ b/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
@@ -1,7 +1,30 @@
-<h1>Pedido</h1>
+<div class="container">
+  <h1>Mi Pedido</h1>
 
-<ul class="">
-  <li *ngFor="let item of itemsToOrder">
-    <span>{{ item.title }}</span>
-  </li>
-</ul>
+  <ul class="list-group">
+    <li *ngFor="let item of itemsToOrder" class="list-group-item clearfix">
+      <div class="row">
+        <div class="col-6">
+          <span>{{ item.item.title }}</span>
+        </div>
+        <div class="col-5">
+          <span>{{item.quantity}} X {{ item.item.price | currency}} subtotal: {{(item.quantity*item.item.price) | currency}}</span>
+        </div>
+        <div class="col-1">
+          <span><button type="button" class="btn btn-danger" (click)="removeItemFromOrder(item)">Eliminar</button></span>
+        </div>
+      </div>
+    </li>
+  </ul>
+<br>
+<br>
+<br>
+  <div class="row">
+    <div class="col-6">
+      <span>Total: ${{ totalPrice }}</span>
+    </div>
+    <div class="col-5"></div>
+    <div class="col-1">
+      <span><button type="button" class="btn btn-primary btn-success" (click)="order()">Ordenar</button></span>
+    </div>
+</div>
