--- a/src/app/components/cartilla/cartilla-menu/item/item.component.html
+++ b/src/app/components/cartilla/cartilla-menu/item/item.component.html
@@ -13,7 +13,7 @@
           </button>
       </div>
   </div>
-  
+
   <div class="cont_tit_cant">
     <div class="cartilla-item__summary">
       {{ item.summary }}
@@ -22,7 +22,7 @@
     <div>
       <input type="button" class="btn btn-danger btn-sm btnpedir" value="Pedir" (click)="addItemToCart()"/>
     </div>
-  </div>  
+  </div>
   <p class="cartilla-item__price">{{item.price | currency}}</p>
 
 
@@ -41,7 +41,7 @@
       <h2>{{ item.title }}</h2>
     </div>
     <div class="col-5">
-      <div class="input-group input-section">
+      <diinputItemQuantity class="input-group input-section">
         <span class="input-group-btn">
           <button type="button" class="btn btn-number" data-type="minus" (click)="decreaseItemQuantity()">
             <i-bs name="dash-square" height="40" width="40" class="item-icon"></i-bs>
