--- a/src/app/components/cartilla/cartilla-menu/item/item.component.html
+++ b/src/app/components/cartilla/cartilla-menu/item/item.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div>
-      <input type="button" class="btn btn-danger btn-sm btnpedir" value="Pedir" (click)="addItemToCart()"/>
+      <input type="button" class="btn btn-danger btn-sm btnpedir" value="Agregar" (click)="addItemToCart()"/>
     </div>
   </div>
   <p class="cartilla-item__price">{{item.price | currency}}</p>
