--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,14 @@
 /* @import '~ngx-toastr/toastr'; */
 /* @import '~ngx-toastr/toastr-bs4-alert'; */
 
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Nunito, "Helvetica Neue", sans-serif; }
+:root {
+    --color-primary: #D92200;
+    --color-secondary: #FF8731;
+}
+
+video {
+    width: auto !important;
+  }
