--- a/src/app/components/cartilla/cartilla-menu/cartilla-order/cartilla-order.component.html
+++ b/src/app/components/cartilla/cartilla-menu/cartilla-order/cartilla-order.component.html
@@ -1,11 +1,13 @@
 <div class="cartilla-order-container" [hidden]="!showCartillaOrder">
-  <div class="row">
-    <div class="col-10">
-      <p>Se agregaron {{ itemsQuantity }} items a su pedido.</p>
-    </div>
-    <div class="col-2">
-      <button type="button" class="btn btn-secondary" (click)="goToOrder()">Ver Pedido</button>
-    </div>
+  <div style="display: flex">
+        <div style="padding: 15px;">
+          Se agregaron <strong><span style="color: var(--color-primary)">{{ itemsQuantity }} items </span></strong> a su pedido.
+        </div>
+        <div style="padding: 15px;">
+          <button type="button" class="btn btn-danger btn-sm" (click)="goToOrder()">Ver Pedido</button>
+        </div>
+
+      
   </div>
 
 </div>
