--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,14 @@ body { margin: 0; font-family: Nunito, "Helvetica Neue", sans-serif; }
 video {
     width: auto !important;
   }
+
+.form-check-input:checked {
+    background-color: var(--color-primary) !important;
+    border-color: var(--color-primary) !important;
+}
+
+.toast-info {
+    background-color: #D92200 !important;
+    box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75) !important;
+    color: white !important;
+}
