--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,16 @@
 /* @import '~ngx-toastr/toastr-bs4-alert'; */
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Nunito, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Nunito, "Helvetica Neue", sans-serif;
+}
+
 :root {
     --color-primary: #D92200;
     --color-secondary: #FF8731;
@@ -16,7 +24,7 @@ body { margin: 0; font-family: Nunito, "Helvetica Neue", sans-serif; }
 
 video {
     width: auto !important;
-  }
+}
 
 .form-check-input:checked {
     background-color: var(--color-primary) !important;
@@ -27,4 +35,31 @@ video {
     background-color: #D92200 !important;
     box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75) !important;
     color: white !important;
+}
+
+/*STYLES MENU-PEDIDO*/
+
+
+
+.btn-add-align {
+    text-align: right;
+    margin-right: -10px;
+}
+
+.btn-add {
+    width: 66%;
+}
+
+
+.input-item-quantity {
+    max-width: 200px;
+}
+
+.input-section {
+    justify-content: right;
+}
+
+.item-already-ordered {
+    color: gray;
+    font-size: small;
 }
