--- a/src/app/components/home/qr-reading.component.css
+++ b/src/app/components/home/qr-reading.component.css
@@ -8,7 +8,7 @@
 .qr-reader{
   width: 80vw;
   height: 80vw;
-  background: aquamarine;
+  background:  rgb(37, 37, 37);
   margin: auto;
   display: flex;
   align-items: center;
