--- a/src/app/components/home/qr-reading.component.html
+++ b/src/app/components/home/qr-reading.component.html
@@ -9,7 +9,7 @@
       <!-- QR ACA -->
       <div class="contqr">
         <div class="qr-reader">
-          <div style="overflow: hidden; width:80vw; height:80vw; z-index:1">
+          <div style="overflow: hidden; width:80vw; height:80vw; z-index:1; background-color:  rgb(37, 37, 37);">
             <zxing-scanner [formats]="allowedFormats" (scanSuccess)="onScanSuccess($event)" previewFitMode="cover">
             </zxing-scanner>
           </div>
