--- a/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
+++ b/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
@@ -9,8 +9,7 @@
         <div>
           <div class="cont_tit_cant">
             <div class="cartilla-item__name">
-              {{ item.item.title }} <span style="color: var(--bs-list-group-color)"><strong> x {{ item.quantity
-                  }}</strong></span>
+              {{ item.item.title }} <span style="color: var(--bs-list-group-color)"><strong> x {{ item.quantity }}</strong></span>
             </div>
             <div class="btns">
               <button class="btn btn-outline-danger btn-sm" (click)="removeItemFromOrder(item)">
@@ -40,20 +39,20 @@
               {{ item.item.title }} <span style="color: var(--bs-list-group-color)"><strong> x {{ item.quantity
                   }}</strong></span>
             </div>
-            <div class="btns">
+            <div class="btns" *ngIf="item.itemStateId == 1">
               <button class="btn btn-outline-danger btn-sm" (click)="removeItemFromOrder(item)">
                 <i class="fa fa-trash"></i>
               </button>
             </div>
           </div>
           <div>
-            <span *ngIf="item.itemStateId == 1" style="color: rgb(231, 85, 17)">
+            <span *ngIf="item.itemStateId == 1" style="color: rgb(194, 191, 17)">
               <i class="fa fa-clock-o"></i>
               Solicitado
             </span>
             <span *ngIf="item.itemStateId == 2" style="color: #00bcd4">
               <i class="fa fa-spinner fa-spin"></i>
-              En Progreso
+              En Preparación
             </span>
             <span *ngIf="item.itemStateId == 3" style="color: rgb(15, 190, 38)">
               <i class="fa fa-check-circle"></i>
@@ -67,42 +66,49 @@
         </div>
       </li>
     </ul>
-
   </div>
-
-
-
-  <!--
-  <ul class="list-group">
-    <li *ngFor="let item of itemsToOrder" class="list-group-item clearfix">
-      <div class="row">
-        <div class="col-5">
-          <span>{{ item.item.title }}</span>
-        </div>
-        <div class="col-2">
-          <span>Estado</span>
-        </div>
-        <div class="col-3">
-          <span>{{item.quantity}} X {{ item.item.price | currency}}</span>
-        </div>
-        <div class="col-2">
-          <span><button type="button" class="btn btn-danger"
-              (click)="removeItemFromOrder(item)">Cancelar</button></span>
-        </div>
-      </div>
-    </li>
-  </ul>
-  <br>
-  <br>
-  <br>
-  <div class="row">
-    <div class="col-6">-->
-  <!-- <span>Total: ${{ totalPrice }}</span> -->
-  <!--
-    </div>
-    <div class="col-5"></div>
-    <div class="col-1">
-      <span><button type="button" class="btn btn-primary btn-success" (click)="order()">Ordenar</button></span>
-    </div>
+  <div style="text-align:right;" class="px-2">
+    <button type="button" class="btn btn-primary btn-sm" (click)="cuenta()"><i class="fa fa-credit-card-alt" aria-hidden="true"></i>&nbsp; Cuenta</button>
   </div>
-</div>-->
+</div>
+
+<div class="container">
+  <table class="table table_ticket">
+    <thead>
+      <tr>
+        <th>Cant.</th>
+        <th>Detalle</th>
+        <th>Precio</th>
+        <th>Subtotal</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of itemsOredered">
+        <td>
+          {{ item.quantity }}  
+        </td>
+        <td>
+          {{ item.item.title }}
+        </td>
+        <td style="text-align: right;">
+          {{ item.item.price | currency }}
+        </td>
+        <td style="text-align: right;">
+          {{ item.item.price * item.quantity | currency }}
+        </td>
+      </tr>
+      <tr>
+        <td colspan="3" style="text-align: right;">
+          <strong>Total</strong>
+        </td>
+        <td>
+          <strong>{{ totalPriceOrder | currency }}</strong>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <div style="display: flex; justify-content: space-evenly;">
+    <button type="button" class="btn btn-secondary btn-sm"><i class="fa fa-money" aria-hidden="true"></i> Efectivo</button>
+    <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-credit-card" aria-hidden="true"></i> Mercado Pago</button>
+  </div>
+</div>
