--- a/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
+++ b/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
@@ -72,7 +72,7 @@
   </div>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <table class="table table_ticket">
     <thead>
       <tr>
@@ -85,7 +85,7 @@
     <tbody>
       <tr *ngFor="let item of itemsOredered">
         <td>
-          {{ item.quantity }}  
+          {{ item.quantity }}
         </td>
         <td>
           {{ item.item.title }}
@@ -111,4 +111,4 @@
     <button type="button" class="btn btn-secondary btn-sm"><i class="fa fa-money" aria-hidden="true"></i> Efectivo</button>
     <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-credit-card" aria-hidden="true"></i> Mercado Pago</button>
   </div>
-</div>
+</div> -->
