--- a/src/app/components/cartilla/cartilla.component.html
+++ b/src/app/components/cartilla/cartilla.component.html
@@ -3,18 +3,16 @@
   <div class="contbuttons">
     <div>
       <button type="button" class="btn btn-outline-danger btn-sm" [ngClass]="{'btn-selected': selectedTab == 'lista'}"
-        (click)="openLista()">Pedidos</button>
+        (click)="openLista()">Mi Pedido</button>
     </div>
     <div>
       <button type="button" class="btn btn-outline-danger btn-sm" [ngClass]="{'btn-selected': selectedTab == 'carta'}"
         (click)="openCarta()">Carta</button>
     </div>
     <div>
-      <button type="button" class="btn btn-outline-danger btn-sm" [ngClass]="{'btn-selected': selectedTab == 'notidicaciones'}"
-        (click)="openNotifications()">Notificaciones</button>
+      <button type="button" class="btn btn-outline-danger btn-sm" (click)="showMozoModal()">Mozo</button>
     </div>
   </div>
 
 <app-cartilla-menu [hidden]="selectedTab != 'carta'"></app-cartilla-menu>
 <app-cartilla-carrito [hidden]="selectedTab != 'lista'"></app-cartilla-carrito>
-<app-notificaciones [hidden]="selectedTab != 'notificaciones'"></app-notificaciones>
