--- a/src/app/components/cartilla/cartilla-carrito/cuenta-modal/cuenta-modal.component.html
+++ b/src/app/components/cartilla/cartilla-carrito/cuenta-modal/cuenta-modal.component.html
@@ -7,44 +7,65 @@
 
 		<div class="modal-body">
 
-      <div class="container">
-        <table class="table table_ticket">
-          <thead>
-            <tr>
-              <th>Cant.</th>
-              <th>Detalle</th>
-              <th>Precio</th>
-              <th>Subtotal</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of itemsOredered">
-              <td>
-                {{ item.quantity }}
-              </td>
-              <td>
-                {{ item.item.title }}
-              </td>
-              <td style="text-align: right;">
-                {{ item.item.price | currency }}
-              </td>
-              <td style="text-align: right;">
-                {{ item.item.price * item.quantity | currency }}
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3" style="text-align: right;">
-                <strong>Total</strong>
-              </td>
-              <td>
-                <strong>{{ totalPriceOrder | currency }}</strong>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <div style="display: flex; justify-content: space-evenly;">
-          <button type="button" class="btn btn-secondary btn-sm"><i class="fa fa-money" aria-hidden="true" (click)="payCash()"></i> Efectivo</button>
-          <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-credit-card" aria-hidden="true" (click)="payMercadoPAgo()"></i> Mercado Pago</button>
-        </div>
+    <div class="container" *ngIf="!showMPModal">
+      <table class="table table_ticket">
+        <thead>
+          <tr>
+            <th>Cant.</th>
+            <th>Detalle</th>
+            <th>Precio</th>
+            <th>Subtotal</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of itemsOredered">
+            <td>
+              {{ item.quantity }}
+            </td>
+            <td>
+              {{ item.item.title }}
+            </td>
+            <td style="text-align: right;">
+              {{ item.item.price | currency }}
+            </td>
+            <td style="text-align: right;">
+              {{ item.item.price * item.quantity | currency }}
+            </td>
+          </tr>
+          <tr>
+            <td colspan="3" style="text-align: right;">
+              <strong>Total</strong>
+            </td>
+            <td>
+              <strong>{{ totalPriceOrder | currency }}</strong>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div style="display: flex; justify-content: space-evenly;">
+        <button type="button" class="btn btn-secondary btn-sm" (click)="payCash()"><i class="fa fa-money" aria-hidden="true" ></i> Efectivo</button>
+        <button type="button" class="btn btn-primary btn-sm" (click)="payMercadoPago()"><i class="fa fa-credit-card" aria-hidden="true" ></i> Mercado Pago</button>
       </div>
+    </div>
+
+    <div class="container" *ngIf="showMPModal">
+      <div *ngIf="showSpinner">
+        <p>
+          Procesando Pago...
+        </p>
+        <p>
+          <mat-spinner style="margin:0 auto;" mode="indeterminate" diameter="20"></mat-spinner>
+        </p>
+    </div>
+      <div *ngIf="endPayment" class="center">
+        <p>
+          <strong>Pago Procesado</strong>
+        </p>
+        <p>
+          <button class="btn btn-secondary" (click)="closeMPModal()">Cerrar</button>
+        </p>
+      </div>
+    </div>
+
+
   </div>
