--- a/src/app/components/open-mesa/open-mesa.component.html
+++ b/src/app/components/open-mesa/open-mesa.component.html
@@ -24,7 +24,7 @@
       <span class="comment__user"><strong>Tu mesa es:</strong></span>
     </div>
     <div class="col-6 text-center">
-      <span class="datores">{{ numeroMesa }}</span>
+      <span class="datores">{{ nombreMesa }}</span>
     </div>
 
   </div>
