--- a/src/app/components/qr-reading/qr-reading.component.html
+++ b/src/app/components/qr-reading/qr-reading.component.html
@@ -5,7 +5,7 @@
     <div class="col">
       <div class="tit">Escanear código QR</div>
       <div class="subtit">Escanea el código de la mesa para iniciar tu pedido</div>
-      
+
       <!-- QR ACA -->
       <div class="contqr">
         <div class="qr-reader">
@@ -23,6 +23,8 @@
     <button class="btn btn-secondary btn-block" (click)="skipScan()">
       Saltear
     </button>
-
+    <button class="btn btn-secondary btn-block" (click)="goToMenu()">
+      Ver Menú
+    </button>
   </div>
 </div>
