--- a/src/app/components/cartilla/cartilla.component.html
+++ b/src/app/components/cartilla/cartilla.component.html
@@ -1,11 +1,11 @@
 <app-headeropti></app-headeropti>
 
-  <div class="contbuttons">
-    <div>
+  <div class="contbuttons" >
+    <div *ngIf="true || isBuyer">
       <button type="button" class="btn btn-outline-danger btn-sm" [ngClass]="{'btn-selected': selectedTab == 'lista'}"
         (click)="openLista()">Mi Pedido</button>
     </div>
-    <div>
+    <div *ngIf="isBuyer">
       <button type="button" class="btn btn-outline-danger btn-sm" [ngClass]="{'btn-selected': selectedTab == 'carta'}"
         (click)="openCarta()">Carta</button>
     </div>
@@ -14,5 +14,5 @@
     </div>
   </div>
 
-<app-cartilla-menu [hidden]="selectedTab != 'carta'"></app-cartilla-menu>
+<app-cartilla-menu [hidden]="selectedTab != 'carta'" [isBuyer]="isBuyer"></app-cartilla-menu>
 <app-cartilla-carrito [hidden]="selectedTab != 'lista'"></app-cartilla-carrito>
