--- a/src/app/components/login/register/register.component.html
+++ b/src/app/components/login/register/register.component.html
@@ -37,6 +37,7 @@
                     name="nombres"
                     placeholder="Nombre/s"
                     required="required"
+                    autofocus
                     />
                     <label class="form-label" for="nombres-input">Nombre/s</label>
                   </div>
