--- a/src/app/components/open-mesa/open-mesa.component.html
+++ b/src/app/components/open-mesa/open-mesa.component.html
@@ -3,7 +3,7 @@
 
   <div class="row" style="margin-top: 2rem; margin-bottom:2rem">
     <div class="col-4" style="text-align:right ;">
-      <img class="logoresto" [src]="'data:image/jpg;base64,' + image" />
+      <img class="logoresto" [src]="image" />
     </div>
     <div class="col-8">
       <div class="row titresto">{{ nombreResto }}</div>
