--- a/src/app/components/common/headeropti/header.component.html
+++ b/src/app/components/common/headeropti/header.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col-2"><img src="../../../assets/logh80.png" alt="logo" class="logo"></div>
 
-    <div class="col-9"></div>
-    <div class="col-1">
-      <button type="button" class="btn btn-default btn-sm" (click)="logOut()">
+    <div class="col-8"></div>
+    <div class="col-2">
+      <button type="button" class="btn btn-default btn-sm" (click)="logOut()" style="color: white;">
         <i-bs name="box-arrow-left" width="25" height="25"></i-bs>
       </button>
     </div>
