delete del item ordenado

--- a/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
+++ b/src/app/components/cartilla/cartilla-carrito/cartilla-carrito.component.html
@@ -40,7 +40,7 @@
                   }}</strong></span>
             </div>
             <div class="btns" *ngIf="item.itemStateId == 1">
-              <button class="btn btn-outline-danger btn-sm" (click)="removeItemFromOrder(item)">
+              <button class="btn btn-outline-danger btn-sm" (click)="removeItemOrdered(item)">
                 <i class="fa fa-trash"></i>
               </button>
             </div>
