--- a/src/app/components/cartilla/cartilla-menu/item/item.component.css
+++ b/src/app/components/cartilla/cartilla-menu/item/item.component.css
@@ -47,3 +47,9 @@
     white-space: nowrap;
 }
 
+.img-space{
+    width: 80px;
+    border-radius: 10px;
+    margin-right: 10px;
+    border: 1px solid #dadada;
+}
