Boton salir + Div menu

--- a/src/app/components/cartilla/cartilla-menu/cartilla-menu.component.html
+++ b/src/app/components/cartilla/cartilla-menu/cartilla-menu.component.html
@@ -11,6 +11,9 @@
   <li class="list-group-item" *ngFor="let item of itemsFiltered">
     <app-item [item]="item" [isBuyer]="isBuyer"></app-item>
   </li>
+  <div class= "mb-5" style = "background-color: rgb(243, 106, 38); text-align: center; color: white; ">
+    Gracias por visitarnos!
+  </div>
 </ul>
 
 <app-cartilla-order></app-cartilla-order>
